@@ -359,8 +359,12 @@ commands:
 
               Supported values are:
                 - AsciiType
+                - BooleanType
                 - BytesType
                 - CounterColumnType (distributed counter column)
+                - DateType
+                - DoubleType
+                - FloatType
                 - Int32Type
                 - IntegerType (a generic variable-length integer type)
                 - LexicalUUIDType
@@ -403,8 +407,12 @@ commands:
 
           Supported values are:
             - AsciiType
+            - BooleanType
             - BytesType
             - CounterColumnType (distributed counter column)
+            - DateType
+            - DoubleType
+            - FloatType
             - Int32Type
             - IntegerType (a generic variable-length integer type)
             - LexicalUUIDType
@@ -422,8 +430,12 @@ commands:
 
           Supported values are:
             - AsciiType
+            - BooleanType
             - BytesType
             - CounterColumnType (distributed counter column)
+            - DateType
+            - DoubleType
+            - FloatType
             - Int32Type
             - IntegerType (a generic variable-length integer type)
             - LexicalUUIDType
@@ -440,7 +452,11 @@ commands:
 
           Supported values are:
             - AsciiType
+            - BooleanType
             - BytesType
+            - DateType
+            - DoubleType
+            - FloatType
             - Int32Type
             - IntegerType (a generic variable-length integer type)
             - LexicalUUIDType
@@ -473,8 +489,12 @@ commands:
 
           Supported values are:
             - AsciiType
+            - BooleanType
             - BytesType
             - CounterColumnType (distributed counter column)
+            - DateType
+            - DoubleType
+            - FloatType
             - Int32Type
             - IntegerType (a generic variable-length integer type)
             - LexicalUUIDType
@@ -566,8 +586,12 @@ commands:
 
               Supported values are:
                 - AsciiType
+                - BooleanType
                 - BytesType
                 - CounterColumnType (distributed counter column)
+                - DateType
+                - DoubleType
+                - FloatType
                 - Int32Type
                 - IntegerType (a generic variable-length integer type)
                 - LexicalUUIDType
@@ -614,8 +638,12 @@ commands:
 
           Supported values are:
             - AsciiType
+            - BooleanType
             - BytesType
             - CounterColumnType (distributed counter column)
+            - DateType
+            - DoubleType
+            - FloatType
             - Int32Type
             - IntegerType (a generic variable-length integer type)
             - LexicalUUIDType
@@ -633,8 +661,12 @@ commands:
 
           Supported values are:
             - AsciiType
+            - BooleanType
             - BytesType
             - CounterColumnType (distributed counter column)
+            - DateType
+            - DoubleType
+            - FloatType
             - Int32Type
             - IntegerType (a generic variable-length integer type)
             - LexicalUUIDType
@@ -651,7 +683,11 @@ commands:
 
           Supported values are:
             - AsciiType
+            - BooleanType
             - BytesType
+            - DateType
+            - DoubleType
+            - FloatType
             - Int32Type
             - IntegerType (a generic variable-length integer type)
             - LexicalUUIDType
@@ -698,8 +734,12 @@ commands:
 
           Supported values are:
             - AsciiType
+            - BooleanType
             - BytesType
             - CounterColumnType (distributed counter column)
+            - DateType
+            - DoubleType
+            - FloatType
             - Int32Type
             - IntegerType (a generic variable-length integer type)
             - LexicalUUIDType
@@ -882,8 +922,12 @@ commands:
 
           Valid options are:
             - AsciiType
+            - BooleanType
             - BytesType
             - CounterColumnType (distributed counter column)
+            - DateType
+            - DoubleType
+            - FloatType
             - Int32Type
             - IntegerType (a generic variable-length integer type)
             - LexicalUUIDType
