@@ -21,6 +21,7 @@
  * avoid quadratic startup time in LeveledManifest (CASSANDRA-3952)
  * Add type information to new schema_ columnfamilies and remove thrift
    serialization for schema (CASSANDRA-3792)
+ * add missing column validator options to the CLI help (CASSANDRA-3926)
 Merged from 1.0:
  * remove the wait on hint future during write (CASSANDRA-3870)
  * (cqlsh) ignore missing CfDef opts (CASSANDRA-3933)
